feat: added context and swagger documentation
