# internal/entity/subscription.go
@@ -8,19 +8,20 @@ import (
 
 // Subscription - структура для храненеия данных подписки
 type Subscription struct {
-	Id          int        `json:"-"`
-	ServiceName string     `json:"service_name"`
-	Price       int        `json:"price"`
-	UserId      uuid.UUID  `json:"user_id"`
-	StartDate   time.Time  `json:"start_date"`
-	EndDate     *time.Time `json:"end_date,omitempty"`
+	Id          int        `json:"-"`                  // id подписки в бд
+	ServiceName string     `json:"service_name"`       // название сервиса, предоставляющего подписку
+	Price       int        `json:"price"`              // стоимость месячной подписки в рублях
+	UserId      uuid.UUID  `json:"user_id"`            // id пользователя в формате UUID
+	StartDate   time.Time  `json:"start_date"`         // дата начала подписки (месяц и год)
+	EndDate     *time.Time `json:"end_date,omitempty"` // дата окончания подписки (месяц и год)
 }
 
+// SubscriptionRequest - структура для парсинга данных подписки из запроса
 type SubscriptionRequest struct {
-	Id          int       `json:"id,omitempty"`
-	ServiceName string    `json:"service_name"`
-	Price       int       `json:"price"`
-	UserId      uuid.UUID `json:"user_id"`
-	StartDate   string    `json:"start_date"`
-	EndDate     *string   `json:"end_date,omitempty"`
+	Id          int       `json:"id,omitempty"`       // id подписки в бд
+	ServiceName string    `json:"service_name"`       // название сервиса, предоставляющего подписку
+	Price       int       `json:"price"`              // стоимость месячной подписки в рублях
+	UserId      uuid.UUID `json:"user_id"`            // id пользователя в формате UUID
+	StartDate   string    `json:"start_date"`         // дата начала подписки (месяц и год)
+	EndDate     *string   `json:"end_date,omitempty"` // дата окончания подписки (месяц и год)
 }
